fixed import alias bug

--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="refine | Build your React-based CRUD applications, without constraints."
-    />
+    <meta name="description" content="gripple" />
+    <link rel="icon" href="/favicon.ico" />
     <meta
       data-rh="true"
       property="og:image"
@@ -25,9 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Fuggles&family=Lato:ital,wght@0,100;0,700;0,900;1,100;1,400;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>
-      gripple - Build your React-based CRUD applications, without constraints.
-    </title>
+    <title>gripple</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
